# enzu

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  agent.go  go.mod  go.sum  logger.go  manager.go  ordeal.toml  pyproject.toml  synergy.go  task.go  tool.go
builder/: builder.go  config.go
docs/: BACKGROUND_ORCHESTRATION.md  BUDGETS_AS_PHYSICS.md  BUDGET_CONTRACTS.md  CASE_STUDY_REPORT_SERVICE.md  COOKBOOK.md  DEPLOYMENT_QUICKSTART.md  FILE_BASED_CHATBOT.md  FILE_BASED_RESEARCHER.md  INTEGRATION_GUIDE.md  PROD_MULTIPLIERS.md  PYTHON_API_REFERENCE.md  QUICKREF.md  README.md  REPORT_SERVICE.md  RLM_CONTEXT.md  RUN_METRICS.md  SERVER.md  STRESS_TESTING.md  core-concepts.md  getting-started.md
enzu/: __init__.py  api.py  bench.py  budget.py  cli.py  client.py  contract.py  doctor.py  engine.py  exceptions.py  jobs.py  models.py  objective.py  openresponses.py  queue.py  retry.py  scalability.py  schema.py  security.py  server.py  session.py  telemetry.py  terminology.py  usage.py
examples/: 1_basic_example.go  2_manager_example.go  3_tools_example.go  4_parallel_example.go  5_search_example.go  6_api_example.go  7_manager_mode_example.go  8_research_assistant_example.go  CONTRIBUTING.md  README.md  budget_cap_cost_openrouter.py  budget_cap_seconds.py  budget_cap_tokens.py  budget_cap_total_tokens.py  budget_hardstop_demo.py  chat_with_budget.py  file_chatbot.py  file_researcher.py  minimal_budget_clamp.py  python_quickstart.py  research_with_exa.py  retry_tracking_demo.py  rlm_context_optimization.py  rlm_with_context.py  run_metrics_demo.py  stress_testing_demo.py  web_scraper_example.go
scripts/: chat_example.py  concurrency_benchmark.py  concurrency_rlm_benchmark.py  export_schema.py  file_chatbot.py  file_researcher.py  new_example.py  research_example.py  rlm_example.py  rlm_trace.py  run_exploration.py  sandbox_scaling_benchmark.py  test_harness_aime25.py  update_openresponses_schema.py
tests/: README.md  conftest.py  test_api_e2e.py  test_api_mode.py  test_api_unix.py  test_budget.py  test_budget_layers.py  test_chaos_audit.py  test_chaos_budget.py  test_chaos_circuit_breaker.py  test_chaos_concurrency.py  test_chaos_deep_probe.py  test_chaos_engine.py  test_chaos_metrics.py  test_chaos_mutation_killers.py  test_chaos_rlm.py  test_chaos_scheduler.py  test_chaos_session.py  test_chaos_targeted.py  test_cli_contract.py  test_concurrency_report.py  test_concurrent_rlm_engines.py  (+53 more)
(+166 files in other folders)
